--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,18 @@
-@font-face {
-  font-family: FixSysCTT;
-  src: url(../fonts/ofont.ru_FixSysCTT.ttf) format("opentype");
-}
-
-/* Eric Meyer's CSS Reset */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-body{
-    background: #101114;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/* End of Eric Meyer's CSS Reset */
-
-html {
-	height: 100%;
-}
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
-	display: block;
-}
-
-body {
-	font: 12px/18px Arial, sans-serif;
-	width: 100%;
-	height: 100%;
     background: url(../img/2-Morning.jpg) no-repeat ;
 }
-.wrapper {
-	width: 1000px;
-	margin: 0 auto;
-	height: auto !important;
-	height: 100%;
-}
-
-/* Header
------------------------------------------------------------------------------*/
-.header {
-	height: 65px;
-}
-
-.container{
-
-}
-
 .main-menu{
-    float: right;
-    margin-right: 50px;
+    margin-right: 30px;
+
 }
 .main-menu__item{
     display: inline-block;
     float: left;
     padding: 20px;
+    margin-left: 18px;
 }
 .main-menu__link{
-    font-size: 32px;
+    font-size: 22px;
     font-family: 'FixSysCTT', arial;
     text-decoration: none;
     color: white;
@@ -100,50 +20,21 @@ body {
 }
 .main-menu__link:hover{
     color: #71ff46;
+    text-decoration: none;
 }
 .active{
     color:aqua;
 }
-.pagination{
-    position: absolute;
-}
-.pagination__left{
-    position: absolute;
-    right: -40px;
-    top: 390px;
-    display: block;
-    font-size: 300px;
-    font-family: 'FixSysCTT';
-    transition: opacity 0.3s, visibility 0s linear 0.3s;
-    opacity: 0.3;
-}
-.pagination__right{
-    transition: opacity 0.3s, visibility 0s linear 0.3s;
-    display: block;
-    font-size: 300px;
-    font-family: 'FixSysCTT';
-    position: absolute;
-    left: 960px;
-    top: 390px;
-    opacity: 0.3;
-}
-.pagination__left:hover,
-.pagination__right:hover{
-    opacity: 0.6;
-    transition: opacity 0.3s, visibility 0s linear 0.3s;
-}
-/* Middle
------------------------------------------------------------------------------*/
-.content {
-	padding: 0 0 100px;
-    min-height: 765px;
-}
+
 
 .projects__box{
     padding-left: 15px;
     padding-top: 10px;
     padding-right: 15px;
     padding-bottom: 10px;
+    -webkit-box-shadow: -5px -5px 14px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    -5px -15px 14px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         -5px -15px 14px 0px rgba(50, 50, 50, 0.75);
 }
 .projects__item{
     margin-left: 60px;
@@ -155,29 +46,27 @@ body {
     border: 1px solid rgba(66, 66, 66, 0.38);
     float: left;
     background: white;
+    list-style-type: none;
 }
 .projects__title{
-    font-size: 22px;
+    font-size: 18px;
     font-family: 'FixSysCTT';
     position: absolute;
     left: -1px;
-    top: -25px;
-    width: 232px;
-    height: 16px;
+    top: -40px;
+    width: 250px;
+    height: 35px;
     display: block;
-    background-color: rgb(151, 121, 233);
+    background-color: #4071CE;
     text-align: center;
     color: white;
     padding: 10px;
-    border-radius: 10px 10px 0px 0px;
 }
 .projects__img{
     margin-left: 12px;
     margin-top: 10px;
-    border-radius: 50%;
     width: 190px;
     height: 190px;
-    border: 3px solid rgba(106, 106, 106, 0.37);
     opacity: 0.5;
     transition: opacity 0.3s, visibility 0s linear 0.3s;
 }
@@ -186,26 +75,26 @@ body {
     transition-delay: 0s;
 }
 .projects__btn{
-  position: absolute;
-  left: -1px;
-  top: 318px;
-  width: 252px;
-  height: 28px;
-  text-decoration: none;
-  text-align: center;
-  padding-top: 10px;
-  border: none;
-  cursor: pointer;
-  font-family: 'FixSysCTT';
-  font-size: 20px;
-  color: white;
-  background: url(../img/bg.png) repeat-x #6B73E0;
-  display: block;
-  -webkit-transition: background 1s ease;
+    position: absolute;
+    left: -1px;
+    top: 316px;
+    width: 250px;
+    height: 33px;
+    text-decoration: none;
+    text-align: center;
+    padding-top: 3px;
+    border: none;
+    cursor: pointer;
+    font-family: 'FixSysCTT';
+    font-size: 18px;
+    color: white;
+    background: #2D71C6;
+    display: block;
+    -webkit-transition: background 1s ease;
 }
 .projects__btn:hover{
-    background: url(../img/bg2.png) repeat-x #6B73E0;
-
+    background: #6499DB;
+    text-decoration: none;
 }
 .projects__btn:focus {
     outline: none;
@@ -213,22 +102,23 @@ body {
 .projects__text{
     display: block;
     height: 50px;
-    margin-top: 5px;
+    margin-top: 8px;
     font-family: 'FixSysCTT';
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 16px;
 }
 
-/* Footer
------------------------------------------------------------------------------*/
-.footer {
-      width: 1000px;
-      margin: -80px auto 0;
-      height: 25px;
-      position: relative;
+.icon-list{
+    padding-left: 40px;
 }
-
-.footer__text{
-      padding-left: 220px;
-      padding-top: 20px;
-      display: block;
+.icon-list a{
+    text-decoration: none;
+}
+.icon-list__item{
+    opacity: 0.5;
+    transition: opacity 0.3s, visibility 0s linear 0.3s;
+}
+.icon-list__item:hover{
+    opacity: 1;    
+    transition-delay: 0s;
 }
